--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
 .body {
+    border: 2px solid red;
+    width: 800px;
+    float: left;
+}
 
+.diff {
+    padding: 10px;
+    border: 2px solid green;
+    margin: 1px;
+    text-align: center;
+    /*float: right;*/
+}
+
+.row {
+    float: left;
+}
+
+.tile {
+    float: left;
+    background: #888888;
+    box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.5);
 }
