Fix positioning of .right-menu
This commit changes the .gridBody to be a table, making it
easier to style the element. Also the positioning of the
element indicated in green in ThePhisics101/Minesweeper#1

closed ThePhisics101/Minesweeper#1

Signed-off-by: MegaXLR <admin@megaxlr.net>

--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@
     text-align: center;
 }
 
-.row {
-    float: left;
-}
-
 .tile {
     float: left;
     background: #888888;
@@ -23,11 +19,14 @@
 }
 
 .right-menu {
-    float: left;
+    float: right;
     display: inline-block;
-    border: 2px solid green;
 }
 
 .grid {
+    display: inline-block;
+}
+
+#gridBody {
     display: inline-block;
 }
