--- a/style.css
+++ b/style.css
@@ -1,32 +1,46 @@
 .body {
-    border: 2px solid red;
+    border: 2px solid red; /* debug */
+
     width: 1000px;
-    /*float: left;*/
-    /*display: inline-block;*/
-}
-
-.diff-select {
-    padding: 10px;
-    border: 2px solid green;
-    margin: 1px;
-    text-align: center;
-}
-
-.tile {
-    float: left;
-    background: #888888;
-    box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.5);
-}
-
-.right-menu {
-    float: right;
-    display: inline-block;
+    -webkit-user-select: none;
 }
 
 .grid {
     display: inline-block;
 }
 
-#gridBody {
+.right-menu {
+    border: 2px solid blue; /* debug */
+
+    float: right;
     display: inline-block;
+    width: 200px;
+}
+
+.diff-select {
+    border: 2px solid green; /* debug */
+
+    padding: 10px;
+    text-align: center;
+}
+
+.reset {
+    border: 2px solid green; /* debug */
+
+    padding: 10px;
+    text-align: center;
+}
+
+.tile {
+    float: left;
+    background: #666;
+    box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.5);
+}
+
+.tile:hover {
+    background: #666;
+}
+
+.tile:active {
+    background: #888;
 }
