--- a/src/sass/tiles.scss
+++ b/src/sass/tiles.scss
@@ -1,3 +1,10 @@
+.tile {
+  float: left;
+  background: linear-gradient(#666, #555);
+  box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.5);
+  text-align: center;
+}
+
 .tile-seen {
   background: #888;
   text-align: center;
